			Java Electric change log

************************* Version 8.00: Released  *************************

IMP: (6/20/04, SMR) Implemented simple waveform window cross-probing.

IMP: (6/20/04, SMR) Added command to export "version 6" ELIB files.

BUG: (6/20/04, SMR) Cell centers are seen higher up the hierarchy.
FIX: In "PixelDrawing.expandedCellCached()" call "drawCell()" with "false" as the last argument.

IMP: (6/18/04, SMR) Implemented "Plot Spice for this Cell" and "Plot Verilog for this Cell".

BUG: (6/18/04, RK) Fixed various problems with NCC export checking

IMP: (6/18/04, SMR) Changed binary file format to include cell anchor points.

BUG: (6/18/04, SMR) Spice output uses wrong .global names.
FIX: In "io.output.Spice.start()" convert power and ground to proper names.

IMP: (6/17/04, SMR) Merged 3 options dialogs into 1 "Preferences" dialog.  Created tool.user.dialogs.options package.

IMP: (6/17/04, SMR) Moved per-cell frame selection into "Cell Properties" instead of "Frame" tab of "Edit Options".

IMP: (6/17/04, RK) Remove "Universal Arcs" from layout generators because Java-Electric NCC doesn't need them.

IMP: (6/17/04, RK) Add Export checking to NCC.

IMP: (6/17/04, RK) Remove various Transistor types. Change Transistor to allow stacking of arbitrary number of series transistors.

IMP: (6/17/04, GVG) Change LayerManager in StatusBar to GridLayout to avoid "flickering" in messages.
     Add TextUtils.formatDouble(<double>, 2) to coordinates. Refresh of window titles when current cell changes.

IMP: (6/17/04, GVG) Window title string composed in WindowFrame.
     MDI mode read from command arguments (valid only for window). Preparing code for 3DView

IMP: (6/16/04, SMR) Made DRC be non-static.

BUG: (6/16/04, SMR) DRC fails on active-to-transistor rules.
FIX: Better cropping in Quick.cropActiveArc().

IMP: (6/15/04, SMR) Changed all "dialog.show()" calls to "dialog.setVisible(true)" because of deprecation in 1.5.
