@@ -2,6 +2,8 @@
 
 ************************* Version 8.00: Released  *************************
 
+IMP: (6/21/04, SMR) Implemented "Edit / Selection / Push Selection", "Pop Selection".
+
 IMP: (6/20/04, SMR) Implemented simple waveform window cross-probing.
 
 IMP: (6/20/04, SMR) Added command to export "version 6" ELIB files.
